--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid rgb(59, 55, 55);
 }
 nav a {
   margin-left: 12px;
