--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,3 +22,7 @@
  .b {
       background-image: 'https://i.pinimg.com/736x/81/93/7a/81937ad7cc2cb895b3af2cf1533b8750--collage-fitness-quotes.jpg';
 }
+
+.h1{
+  text-align: center;
+}
